//
//  Storyboard.swift
//  Decade Of Movies
//
//  Created by Naira Bassam on 03/11/2023.
//

import Foundation

struct Storyboard {
    static let master = "Master"
    static let details = "Details"
    static let search = "Search"
}
