...
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0t-dX-2cm">
                        <rect key="frame" x="0.0" y="0.0" width="169" height="191"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="cnZ-IS-sLH">
                                <rect key="frame" x="12" y="33.666666666666657" width="145" height="124"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5cc-q0-JAg">
                                        <rect key="frame" x="0.0" y="0.0" width="145" height="25"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="Cp4-uf-gTO"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="18"/>
                                        <color key="textColor" name="Dark"/>
...
